--- a/index-3.html
+++ b/index-3.html
@@ -82,7 +82,7 @@
     <div class="nicdark_navigation_4_sidebar">
         <ul>
             <li>
-                <a href="index-3.html">HOME</a>
+                <a href="index.html">HOME</a>
             </li>
             <li>
                 <a href="courses.html">COURSES</a>
@@ -264,7 +264,7 @@
                 <div class="nicdark_navigation_4 nicdark_text_align_right nicdark_float_right nicdark_display_none_all_responsive">
                     <ul>
                         <li>
-                            <a href="index-3.html">HOME</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
                             <a href="courses.html">COURSES</a>
