--- a/about-us.html
+++ b/about-us.html
@@ -520,7 +520,7 @@
                                         <div class="nicdark_bg_greydark_alpha_gradient_3 nicdark_position_absolute nicdark_left_0 nicdark_height_100_percentage nicdark_width_100_percentage nicdark_box_sizing_border_box">
                                             
                                             <div class="nicdark_position_absolute nicdark_bottom_30 nicdark_width_100_percentage nicdark_padding_botttom_0 nicdark_padding_50 nicdark_box_sizing_border_box nicdark_text_align_center">
-                                                <h2 class="nicdark_color_white"><strong>Jack Johnson</strong></h2>
+                                                <h2 class="nicdark_color_white"><strong>Augustine</strong></h2>
                                                 <div class="nicdark_section nicdark_height_10"></div>
                                                 <h6 class="nicdark_text_transform_uppercase nicdark_color_white">Vegan Specialist</h6>
                                                 <div class="nicdark_section nicdark_height_20"></div>
