--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
 </div>
 <!--END search container-->
 
-
-
-
 <!--START menu responsive-->
 <div class="nicdark_navigation_4_sidebar_content nicdark_padding_40 nicdark_box_sizing_border_box nicdark_overflow_hidden nicdark_overflow_y_auto nicdark_transition_all_08_ease nicdark_bg_green nicdark_height_100_percentage nicdark_position_fixed nicdark_width_300 nicdark_right_300_negative nicdark_z_index_9">
 
@@ -82,10 +79,10 @@
     <div class="nicdark_navigation_4_sidebar">
         <ul>
             <li>
-                <a href="index.html">HOME</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="courses.html">COURSES</a>
+                <a href="courses.html">courses</a>
 
                 <ul class="nicdark_sub_menu">
                     <li><a href="single-course.html">Piano</a></li>
@@ -93,30 +90,11 @@
                     <li><a href="single-course.html">Western Vocal</a></li>
                     <li><a href="single-course.html">Guitar</a></li>
                     <li><a href="single-course.html">Western Violin</a></li>
-                    <!-- <li>
-                        <a href="account.html">User Pages</a>
-
-                        <ul class="nicdark_sub_menu">
-                            <li><a href="account.html">My Account</a></li> 
-                            <li><a href="compare.html">Compare</a></li>
-                        </ul>
-
-                    </li> 
-                    <li>
-                        <a href="courses.html">Shop</a>
-
-                        <ul class="nicdark_sub_menu">
-                            <li><a href="cart.html">Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
-                            <li><a href="thankyou.html">Thank You</a></li>
-                        </ul>
-
-                    </li>  -->
                 </ul>
 
             </li>
             <li>
-                <a href="teachers.html">TEACHERS</a>
+                <a href="teachers.html">teachers</a>
 
                 <ul class="nicdark_sub_menu">
                     <li><a href="single-teacher.html">Single Teacher</a></li>
@@ -127,17 +105,13 @@
                 <a href="#">Explore us</a>
                 <ul class="nicdark_sub_menu">
                     <li><a href="about-us.html">About Us</a></li>
-                    <!-- <li><a href="services.html">Services</a></li>
-                    <li><a href="single-course.html">Single Course</a></li>
-                    <li><a href="single-teacher.html">Single Teacher</a></li>
-                    <li><a href="contact-1.html">Contact</a></li> -->
                 </ul>
             </li>
             <li>
                 <a href="blog-standard.html">News</a>
             </li>
             <li>
-                <a href="contact-1.html">CONTACT</a>
+                <a href="contact-1.html">contact</a>
             </li>
             
         </ul>
@@ -148,7 +122,6 @@
 
 </div>
 <!--END menu responsive-->
-
 
 
 <div class="nicdark_section nicdark_position_absolute nicdark_margin_top_20">
@@ -358,7 +331,7 @@
 </div>
 </div>
 
-        <div class="nicdark_section nicdark_background_size_cover nicdark_background_position_center" style="background-image:url(img/parallax/img391.png);">
+        <div class="nicdark_section nicdark_background_size_cover nicdark_background_position_center" style="background-image:url(img/parallax/img392.png);">
 
     <div class="nicdark_section nicdark_bg_greydark_alpha_gradient_5">
 
@@ -376,7 +349,7 @@
                 <!-- <strong class="nicdark_color_white nicdark_font_size_70 nicdark_font_size_40_responsive nicdark_line_height_40_responsive nicdark_first_font nicdark_display_block">Learn</strong> -->
                 <!-- <img alt="" class="nicdark_section" src=""> -->
                 <div class="nicdark_section">
-                    <a href="index.html"><img alt="" width="200" class="" src="img/parallax/musiqlab-banner1.png"></a>
+                    <a href="index.html"><img alt="" width="250" class="" src="img/parallax/musiqlab-banner1.png"></a>
                 </div>
                 <!-- <div class="nicdark_section nicdark_height_20"></div>
 
@@ -471,7 +444,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-1.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">John</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -551,7 +524,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-2.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Jane</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -629,7 +602,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-3.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Susy</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -709,7 +682,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-4.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Lisa</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -789,7 +762,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-5.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Mark</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -869,7 +842,7 @@
                     <div class="nicdark_width_33_percentage nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
                         <div class="nicdark_display_table nicdark_float_left">
                             <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-6.png">
-                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Mary</a></p>
+                            <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15"><a href="single-teacher.html">Augustine</a></p>
                         </div>
                     </div> 
 
@@ -1019,7 +992,7 @@
                             <div class="nicdark_width_50_percentage nicdark_float_left">
                                 <div class="nicdark_display_table nicdark_float_left">
                                     <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-2.png">
-                                    <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15">Jane</p>
+                                    <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15">Augustine</p>
                                 </div> 
                             </div> 
 
@@ -1048,7 +1021,7 @@
                             <div class="nicdark_display_inline_block">
                                 <div class="nicdark_display_table nicdark_float_left">
                                     <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle" width="30" src="img/icons/icon-quote-grey-alpha.svg">
-                                    <p class="nicdark_color_white nicdark_display_table_cell nicdark_vertical_align_middle">John Doe</p>
+                                    <p class="nicdark_color_white nicdark_display_table_cell nicdark_vertical_align_middle">Augustine</p>
                                 </div>
                             </div>
                         </div>
@@ -1111,7 +1084,7 @@
                             <div class="nicdark_width_50_percentage nicdark_float_left">
                                 <div class="nicdark_display_table nicdark_float_left">
                                     <img alt="" class="nicdark_margin_right_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="25" src="img/avatar/avatar-chef-1.png">
-                                    <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15">John Doe</p>
+                                    <p class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_font_size_15">Augustine</p>
                                 </div> 
                             </div> 
 
@@ -1296,7 +1269,7 @@
                                 </tr>
                                 <tr class="nicdark_border_bottom_2_solid_grey">
                                     <td class="nicdark_padding_10 ">
-                                <div class="nicdark_width_50_percentage_all_iphone nicdark_display_none_all_iphone nicdark_float_left">
+                                <div class="nicdark_width_50_percentage_all_iphone nicdark_float_left">
                                     <div class="nicdark_display_table nicdark_float_left">
                                         <h6 class="nicdark_display_table_cell nicdark_vertical_align_middle nicdark_text_transform_uppercase"><strong>Contact via: </strong></h6>
                                        <a href="whatsapp.html"> <img alt="" class="nicdark_margin_left_10 nicdark_display_table_cell nicdark_vertical_align_middle nicdark_border_radius_100_percentage" width="45" src="img/icons/icon-whatsapp.svg">           
@@ -1417,9 +1390,6 @@
                     </li>
                     <li>
                         <a href="about-us.html">ABOUT US</a>
-                    </li>
-                    <li>
-                        <a href="services.html">SERVICES</a>
                     </li>
                     <li>
                         <a href="contact-1.html">CONTACT</a>
