links and images fixes

--- a/single-teacher.html
+++ b/single-teacher.html
@@ -561,11 +561,11 @@
                                             </tr>
                                             <tr class="nicdark_border_bottom_2_solid_grey">
                                                 <td class="nicdark_padding_20 "><img alt="" class="" width="40" src="img/icons/icon-link-grey.svg"></td>
-                                                <td class="nicdark_padding_20 "><h4 class=" nicdark_text_align_right">Web: www.augustine.com</h4></td>
+                                                <td class="nicdark_padding_20 "><h4 class=" nicdark_text_align_right">Web: www.music-lab.com</h4></td>
                                             </tr>
                                             <tr>
                                                 <td class="nicdark_padding_20 "><img alt="" class="" width="40" src="img/icons/icon-pin-grey.svg"></td>
-                                                <td class="nicdark_padding_20 "><h4 class=" nicdark_text_align_right">Location: Milan ( IT )</h4></td>
+                                                <td class="nicdark_padding_20 "><h4 class=" nicdark_text_align_right">Location: Kochi ( IN )</h4></td>
                                             </tr>
                                         </tbody>
                                     </table>
