--- a/services.html
+++ b/services.html
@@ -1015,7 +1015,7 @@
 
                         <h6 class="nicdark_second_font nicdark_bg_orange nicdark_padding_5 nicdark_border_radius_3 nicdark_color_white nicdark_display_inline_block">CONTACT US</h6>
                         <div class="nicdark_section nicdark_height_5"></div>
-                       <h2><strong>Request a free Quote</strong></h2>
+                       <h2><strong>Book a trial</strong></h2>
                        <div class="nicdark_section nicdark_height_20"></div>
                        <p>Phasellus enim libero, blandit vel sapien vitae, condimentum ultricies magna et. Quisque euismod orci ut et lobortis.</p>
                         <div class="nicdark_section nicdark_height_30"></div>
