--- a/about-us.html
+++ b/about-us.html
@@ -332,7 +332,7 @@
 </div>
 
                        
-                <div class="nicdark_section nicdark_background_size_cover nicdark_background_position_center_bottom" style="background-image:url(img/parallax/img-founder.png);">
+                <div class="nicdark_section nicdark_background_size_cover nicdark_background_position_center_bottom" style="background-image:url(img/parallax/img-founder1.png);">
 
                     <div class="nicdark_section nicdark_bg_greydark_alpha_gradient_2">
 
@@ -631,7 +631,7 @@
                             <div class="grid grid_5 ">
                             
                                 <div class="nicdark_padding_20">    
-                                    <h1 class="nicdark_font_size_40"><strong><span class="nicdark_color_f1f1f1">01.</span> Experience</strong></h1>
+                                    <h1 class="nicdark_font_size_40"><strong><span class="nicdark_color_f1f1f1">01.</span>Music Experience</strong></h1>
                                     <div class="nicdark_section nicdark_height_20"></div>
                                     <p>Music moved on from being 	a small part of my life to a passion. So when I stopped practicing music  there was a hole. That’s when the transition happened . I went back to music with an extra vigor. 
                                         Soon I discovered my fondness for the instruments (Piano) Along with my stage performance I was parallel teaching music in Music Academies/ Schools etc, This helped me to transition my music knowledge & skills to students & budding musicians.
