--- a/blog-standard.html
+++ b/blog-standard.html
@@ -213,7 +213,7 @@
 
             <div class="grid grid_12 nicdark_display_none_all_responsive">
 
-                <div class="nicdark_section nicdark_height_10"></div>
+                <!-- <div class="nicdark_section nicdark_height_10"></div> -->
 
                 <!--LOGO-->
                 <a href="index.html"><img alt="" class="nicdark_position_absolute nicdark_left_15" width="85" src="img/logos/musiqlabtop.png"></a>
