--- a/blog-standard.html
+++ b/blog-standard.html
@@ -85,11 +85,12 @@
                 <a href="courses.html">Courses</a>
 
                 <ul class="nicdark_sub_menu">
-                    <li><a href="single-course.html">Piano</a></li>
-                    <li><a href="single-course.html">Humming Bird</a></li>
-                    <li><a href="single-course.html">Western Vocal</a></li>
-                    <li><a href="single-course.html">Guitar</a></li>
-                    <li><a href="single-course.html">Western Violin</a></li>
+                    <li><a href="piano.html">Piano</a></li>
+                    <li><a href="humming-bird.html">Humming Bird</a></li>
+                    <li><a href="western-vocal.html">Western Vocal</a></li>
+                    <li><a href="guitar.html">Guitar</a></li>
+                    <li><a href="western-violin.html">Western Violin</a></li>
+                    <li><a href="vocal-therapy.html">Vocal Therapy</a></li>
                 </ul>
 
             </li>
@@ -201,8 +202,8 @@
                 <div class="nicdark_section nicdark_height_10"></div> -->
 
                 <!--LOGO-->
-                <a href="index.html"><img alt="" class="nicdark_position_absolute nicdark_left_15" width="85" src="img/logos/musiqlabtop1.png"></a>
-              
+                <!-- <a href="index.html"><img alt="" class="nicdark_position_absolute nicdark_left_15" width="85" src="img/logos/musiqlabtop1.png"></a>
+               -->
 
                 <!--right icons menu-->
                 <!-- <div class="nicdark_float_right nicdark_width_100  nicdark_position_relative nicdark_height_25 nicdark_display_none_all_responsive">
@@ -228,11 +229,12 @@
                             <a href="courses.html">COURSES</a>
 
                             <ul class="nicdark_sub_menu">
-                                <li><a href="single-course.html">Piano</a></li>
-                                <li><a href="single-course.html">Humming Bird</a></li>
-                                <li><a href="single-course.html">Western Vocal</a></li>
-                                <li><a href="single-course.html">Guitar</a></li>
-                                <li><a href="single-course.html">Western Violin</a></li>
+                                <li><a href="piano.html">Piano</a></li>
+                                <li><a href="humming-bird.html">Humming Bird</a></li>
+                                <li><a href="western-vocal.html">Western Vocal</a></li>
+                                <li><a href="guitar.html">Guitar</a></li>
+                                <li><a href="western-violin.html">Western Violin</a></li>
+                                <li><a href="vocal-therapy.html">Vocal Therapy</a></li>
                              </ul>
                         </li>
                         <!-- <li>
@@ -280,10 +282,10 @@
             </div>
 
             <!--RESPONSIVE-->
-            <div class="nicdark_width_50_percentage nicdark_text_align_center_all_iphone nicdark_width_100_percentage_all_iphone nicdark_float_left nicdark_display_none nicdark_display_block_responsive">
+            <!-- <div class="nicdark_width_50_percentage nicdark_text_align_center_all_iphone nicdark_width_100_percentage_all_iphone nicdark_float_left nicdark_display_none nicdark_display_block_responsive">
                 <div class="nicdark_section nicdark_height_20"></div>
                 <a href="index.html"><img alt="" width="170" class="" src="img/logos/musiqlabtop1.png"></a>   
-            </div>
+            </div> -->
             <div class="nicdark_width_50_percentage nicdark_width_100_percentage_all_iphone nicdark_float_left nicdark_display_none nicdark_display_block_responsive">
                 <div class="nicdark_section nicdark_height_20"></div>
                 <div class="nicdark_float_right nicdark_width_100_percentage nicdark_text_align_right nicdark_text_align_center_all_iphone">
